--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^5.1.0",
+    "@openzeppelin/contracts-upgradeable": "^4.9.0",
     "hardhat": "^2.22.15"
   },
   "devDependencies": {
